# peko

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  logo.html  tiered-control.md
adapt-cache/: Cargo.toml
adapt-cache/src/: fs.rs  lib.rs  s3.rs
cli/: CLAUDE.md  Cargo.toml  README.md
cli/src/: cli.rs  main.rs
cli/src/commands/: build.rs  init.rs  local.rs
cli/src/config/: framework.rs  language.rs  mod.rs  package_manager.rs
cli/src/generators/: mod.rs  typescript.rs
cli/src/generators/templates/: hono.rs  mod.rs  package_json.rs  rolldown_config.rs  wit_component.rs  wit_deps.rs
cli/src/prompts/: init.rs
cli/src/utils/: command.rs
e4/: CLAUDE.md  Cargo.toml  bootstrap.js
e4/example-hello-world/: index.ts  package-lock.json  package.json
e4/src/: main.rs
fn0/: Cargo.toml  TODO.md
fn0/src/: compile.rs  engine.rs  execute.rs  lib.rs  main.rs  metrics.rs  on_fn_call.rs  one.rs  telemetry.rs  warm_up_map.rs
fn0/src/list_neighbors/: oci.rs
forte/: CLAUDE.md  Cargo.toml  PLAN.md  PROGRESS.md  README.md
forte-manual/rs/: Cargo.toml  build.rs
forte/cli/: Cargo.toml
forte/cli/src/: main.rs
forte/cli/src/cli/: build.rs  dev.rs
forte/cli/src/server/: mod.rs
forte/cli/tests/: dev_test.rs  init_test.rs  write_if_changed_test.rs
forte/db/: Cargo.toml
forte/db/src/: lib.rs  turso.rs
forte/db/tests/: integration_test.rs
forte/forte-json/src/: lib.rs
forte/forte-json/tests/: basic_types.rs  compare_serde_json.rs  enum_variants.rs
forte/forte-manual/fe/: .gitignore  dev-server.mjs  package-lock.json  package.json  rolldown.config.ts  tsconfig.json
forte/forte-manual/fe/src/: routes.generated.ts  server.ts
forte/forte-manual/rs/: .gitignore  README.md  build.rs
forte/forte-manual/rs/src/: lib.rs
forte/forte-rs-to-ts/: CLAUDE.md  Cargo.toml  GOAL.md  PLAN.md  rust-toolchain.toml
forte/forte-rs-to-ts/src/: analyzer.rs  main.rs  name_resolution.rs  rust_to_ts.rs  ts_codegen.rs
forte/forte/src/cli/: add.rs  init.rs
forte/forte/tests/: init_test.rs
forte/macros/: Cargo.toml
forte/macros/src/: lib.rs
forte/rs-sdk/: Cargo.toml
forte/rs-sdk/src/: cookie_sign.rs  generate_routes.rs  lib.rs
forte/src/: main.rs
forte/src/cli/: build.rs  dev.rs  init.rs  mod.rs
forte/src/codegen/: backend.rs  frontend.rs  mod.rs
forte/src/commands/: dev.rs  init.rs  mod.rs
forte/src/generator/: typescript.rs
forte/src/parser/: mod.rs  rust_parser.rs  types.rs
forte/src/server/: cache.rs  hmr.rs  mod.rs
forte/src/templates/: frontend_ssr.rs  mod.rs
forte/src/watcher/: mod.rs
forte/tests/: add_test.rs  build_test.rs  dev_test.rs  init_test.rs
hq/: Cargo.toml  Dockerfile  PLAN.md  README.md  build.rs  host-provider.schema.json
hq/src/: args.rs  args_parse.rs  deployment_cache.rs  deployment_db.rs  health_checker.rs  host_connection.rs  host_id.rs  main.rs  params.rs  reaper.rs  telemetry.rs
hq/src/host_provider/: mod.rs  oci_container.rs
hq/src/site/: dns_sync.rs  list_host.rs  mod.rs  reaper.rs  recv_pong.rs  scaler.rs  send_ping.rs
hq/src/watchdog/: mod.rs  scaling.rs
hq/src/watchdog/host_registry/: mod.rs
ls-news/rs/: .gitignore  Cargo.toml  build.rs
ls-news/rs/src/: docs.rs  lib.rs  route_generated.rs
ls-news/rs/src/common/: auth.rs
ls-news/rs/src/pages/: write.rs
oci-rust-sdk/: .gitignore  CLAUDE.md  Cargo.toml  GENERATING_SDK.md  generate-sdk.sh
oci-rust-sdk/examples/: container_instance_lifecycle.rs  launch_instance_configuration.rs  list_container_instances.rs  list_instances.rs  list_public_ips.rs  resource_search.rs  simple_auth.rs  simple_container_instance.rs  test_lifecycle_state.rs  using_traits.rs
oci-rust-sdk/src/: lib.rs
oci-rust-sdk/src/audit/: mod.rs
oci-rust-sdk/src/audit/models/: audit_event.rs  configuration.rs  data.rs  identity.rs  mod.rs  request.rs  response.rs  state_change.rs  update_configuration_details.rs
oci-rust-sdk/src/auth/: config.rs  federation.rs  imds.rs  instance_principals.rs  mod.rs  provider.rs  signer.rs  simple.rs  x509_utils.rs
oci-rust-sdk/src/compute/: mod.rs
oci-rust-sdk/src/compute/models/: compute_instance_details.rs  compute_instance_options.rs  create_vnic_details.rs  enums.rs  instance_agent_plugin_config_details.rs  instance_configuration_attach_vnic_details.rs  instance_configuration_attach_volume_details.rs  instance_configuration_availability_config.rs  instance_configuration_block_volume_details.rs  instance_configuration_create_vnic_details.rs  instance_configuration_create_volume_details.rs  instance_configuration_host_group_placement_constraint_details.rs  instance_configuration_instance_details.rs  instance_configuration_instance_options.rs  instance_configuration_instance_source_details.rs  instance_configuration_instance_source_image_filter_details.rs  instance_configuration_ipv6_address_ipv6_subnet_cidr_pair_details.rs  instance_configuration_iscsi_attach_volume_details.rs  instance_configuration_launch_instance_agent_config_details.rs  instance_configuration_launch_instance_details.rs  instance_configuration_launch_instance_platform_config.rs  instance_configuration_launch_instance_shape_config_details.rs  instance_configuration_launch_options.rs  instance_configuration_paravirtualized_attach_volume_details.rs  instance_source_details.rs  launch_instance_details.rs  launch_instance_licensing_config.rs  launch_instance_shape_config_details.rs  (+4 more)
oci-rust-sdk/src/containerinstances/: mod.rs
oci-rust-sdk/src/core/: mod.rs  region.rs  retry.rs
oci-rust-sdk/src/os_management_hub/: mod.rs
oci-rust-sdk/src/osmanagementhub/: mod.rs
oci-rust-sdk/src/resource_search/: mod.rs
oci-rust-sdk/src/resourcesearch/: mod.rs
oci-rust-sdk/src/virtual_network/: mod.rs
oci-rust-sdk/tools/: README.md
oci-rust-sdk/tools/discovery/: discover.ts  package-lock.json  package.json
oci-rust-sdk/tools/generator/: Cargo.toml
oci-rust-sdk/tools/parser/: package-lock.json  package.json  parse-models.ts  tsconfig.json
peko/: Cargo.toml  TODO.md
peko/src/: execute.rs  main.rs  metrics.rs  on_request.rs
peko/src/list_neighbors/: mod.rs
(+1581 files in other folders)
