[package]
name = "peko"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0" }
wasmtime = { version = "38.0.4", features = [
    "runtime",
    "component-model",
    "component-model-async",
] }
memberlist = { version = "0.7", features = ["snappy", "tokio", "quinn"] }
# wasmtime-wasi = { version = "38.0.4", default-features = false, features = [
#     "p2",
# ] }
hyper = { version = "1.8.1", features = ["server"] }
sonic-rs = "0.5.6"
async_singleflight = "0.6.1"
aws-sdk-s3 = "1.115.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
anyhow = "1.0"
bytes = "1.11.0"

[dev-dependencies]
aws-smithy-mocks = "0.2.1"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
