[workspace]
resolver = "3"
members = ["adapt-cache", "doc-db"]

[workspace.dependencies]
anyhow = "1"
async_singleflight = "0.6"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.115"
aws-smithy-mocks = "0.2"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.3"
bytes = "1"
clap = "4.5.53"
color-eyre = "0.6"
hyper = "1"
hyper-util = "0.1"
inquire = "0.9"
libsql = "0.9"
serde = "1.0"
serde_json = "1.0"
socket2 = "0.5"
tempfile = "3"
tokio = "1.48"
toml = "0.8"
tower = "0.5"
