[package]
name = "adapt-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
async_singleflight = "0.6"
aws-sdk-s3 = "1.115"
bytes = "1"
anyhow = "1"
tokio = { version = "1.48.0", features = ["fs", "rt", "test-util"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.48.0", features = ["macros", "test-util"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-smithy-mocks = "0.2.1"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
aws-sdk-s3 = { version = "1", features = ["test-util"] }
