[package]
name = "adapt-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
async_singleflight.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "test-util"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "test-util"] }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-smithy-mocks.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
