[package]
name = "fn0-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = "0.6.5"
inquire = "0.9.1"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
fn0 = { path = "../fn0" }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
