[package]
name = "fn0"
version = "0.1.0"
edition = "2024"

[dependencies]
adapt-cache = { path = "../adapt-cache" }
measure-cpu-time = { path = "../measure-cpu-time" }
wasmtime = { version = "39", default-features = false, features = [
    "runtime",
    "component-model",
    "component-model-async",
    "memory-protection-keys",
    "winch",
    "parallel-compilation",
    "cache",
] }
wasmtime-wasi = { version = "39" }
wasmtime-wasi-http = "39"
tokio = { version = "1" }
memberlist = { version = "0.7", features = ["snappy", "tokio", "quinn"] }
hyper = { version = "1", features = ["server"] }
hyper-util = { version = "0.1", features = ["service"] }
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.7", features = ["timeout"] }
bytes = "1"
color-eyre = "0.6.5"
http-body-util = "0.1"
sysinfo = "0.37.2"
oci-rust-sdk = { path = "../oci-rust-sdk", features = ["virtual_network"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "http2",
    "rustls-tls",
] }
sonic-rs = "0.5.6"
futures = "0.3.31"
socket2 = "0.6.1"
opentelemetry = { version = "0.31.0", features = ["logs", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "reqwest-client",
    "metrics",
    "logs",
] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
tracing = "0.1.43"

[dev-dependencies]
wasmtime = { version = "39", features = [
    "runtime",
    "component-model",
    "component-model-async",
    "memory-protection-keys",
] }
