[package]
name = "forte"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
notify = "6.1"
notify-debouncer-full = "0.3"
walkdir = "2.4"
heck = "0.5"
ctrlc = "3.4"
regex = "1.10"
