[package]
name = "hq"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
host-hq-protocol = { path = "../host-hq-protocol", version = "0.1" }
doc-db = { path = "../doc-db", version = "0.1" }
chrono = "0.4.42"
color-eyre = "0.6.5"
dashmap = "6.1.0"
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
oci-rust-sdk = { version = "0.2.1", features = ["container_instances"] }
base64 = "0.22.1"
rand = "0.9.2"
opentelemetry = { version = "0.31.0", features = ["logs", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "reqwest-client",
    "metrics",
    "logs",
] }
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
tracing = "0.1.43"
schemars = "0.8"
quinn = "0.11.9"
rustls = "0.23.35"
bytes = "1.11.0"
singleflight = "0.3.0"
boxcar = "0.2.14"

[dev-dependencies]
wiremock = "0.6"

[build-dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
