[package]
name = "oci-rust-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OCI Rust SDK Contributors"]

[features]
default = []
compute = []
os_management_hub = []
resource_search = []
virtual_network = []

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
pem = "3"
http = "1"
url = "2"
thiserror = "1"
anyhow = "1"
configparser = "3"
dirs = "5"
urlencoding = "2"
x509-parser = "0.16"
jsonwebtoken = "9"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
mockito = "1"

[[example]]
name = "list_instances"
required-features = ["compute"]

[[example]]
name = "list_public_ips"
required-features = ["virtual_network"]

[[example]]
name = "resource_search"
required-features = ["resource_search"]

[[example]]
name = "test_lifecycle_state"
required-features = ["compute"]

[[example]]
name = "using_traits"
required-features = ["os_management_hub"]
