[package]
name = "oci-rust-sdk"
version = "0.4.0"
edition = "2024"
description = "Unofficial Oracle OCI SDK for Rust"
authors = ["namse"]
license = "AGPL-3.0"
repository = "https://github.com/namseent/fn0/oci-rust-sdk"

[features]
default = []
core = []
containerinstances = []
osmanagementhub = []
resourcesearch = []
audit = []

[dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
pem = "3"
http = "1"
url = "2"
thiserror = "1"
anyhow = "1"
configparser = "3"
dirs = "5"
urlencoding = "2"
x509-parser = "0.16"
jsonwebtoken = "9"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
mockito = "1"

[[example]]
name = "launch_instance_configuration"
required-features = ["core"]

[[example]]
name = "list_instances"
required-features = ["core"]

[[example]]
name = "list_public_ips"
required-features = ["core"]

[[example]]
name = "simple_auth"

[[example]]
name = "resource_search"
required-features = ["resourcesearch"]

[[example]]
name = "test_lifecycle_state"
required-features = ["core"]

[[example]]
name = "using_traits"
required-features = ["osmanagementhub"]

[[example]]
name = "list_container_instances"
required-features = ["containerinstances"]

[[example]]
name = "container_instance_lifecycle"
required-features = ["containerinstances"]

[[example]]
name = "simple_container_instance"
required-features = ["containerinstances"]
