[package]
name = "peko"
version = "0.1.0"
edition = "2024"

[dependencies]
adapt-cache = { path = "../adapt-cache" }
measure-cpu-time = { path = "../measure-cpu-time" }
wasmtime = { version = "39", default-features = false, features = [
    "runtime",
    "component-model",
    "component-model-async",
] }
wasmtime-wasi = { version = "39" }
wasmtime-wasi-http = "39"
tokio = { version = "1" }
memberlist = { version = "0.7", features = ["snappy", "tokio", "quinn"] }
hyper = { version = "1", features = ["server"] }
bytes = "1"
anyhow = "1"
http-body-util = "0.1"
hyper-util = "0.1.18"

[dev-dependencies]
