[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:backend"
proxy = true

[dependencies]
anyhow = "1.0"
http = "1.4"
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
forte-json = { path = "../../forte-json" }
wit-bindgen-rt = { version = "0.41", features = ["bitflags"] }
wstd = "0.6"

[build-dependencies]
rustdoc-types = "0.57"
