[package]
name = "forte-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
wstd = "0.6"
forte-json = { path = "../../forte/forte-json" }
forte-db = { path = "../../forte/db" }
cookie = { version = "0.18", features = ["percent-encode"] }
syn = { version = "2.0", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
sha2 = "0.10.9"
hmac = "0.12.1"
hex = "0.4.3"
