[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
wstd = "0.6"
forte-json = { path = "../../forte/forte-json" }
forte-db = { path = "../../forte/db" }
cookie = { version = "0.18", features = ["percent-encode"] }
